# UnsplashPlaces

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/: sample_page_1.htm  sample_page_2.htm  unsplash_map.html  unsplash_places.csv
output/: 1_unsplash_places_with_location.csv  places_with_gps.csv  unsplash_map.html  unsplash_places.csv
src/unsplash_places/: config.py  database.py  fetcher.py  geocoding.py  main.py  scraper.py  visualization.py
tests/: test_fetcher.py  test_main.py  test_scraper.py
